[gd_scene load_steps=2 format=3 uid="uid://dqpowbf5t4nxt"]

[ext_resource type="Script" uid="uid://ddduq2grc4bkv" path="res://levels/level_mechanics/waterzone.gd" id="1_y5t8i"]

[node name="waterzone" type="Area2D"]
collision_layer = 3
collision_mask = 3
gravity_space_override = 1
gravity = 300.0
script = ExtResource("1_y5t8i")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
